test/files/pos/t11374.scala

class C {
  val `_` = 42
  val Some(`_`) = Option(42)
}
