test/files/neg/macro-deprecate-dont-touch-backquotedidents/Macros_Bind_12.scala
object Test12 {
  val Some(`macro`) = Some(42)
  `macro` match {
    case `macro` => println(`macro`)
  }
}